Add pagination and sorting for fetching properties
Replaced the simple list-based `getAllProperties` method with a paginated and sortable implementation. Introduced `PropertyResponse` DTO for encapsulating paginated results and updated controller and service layers to handle these changes. Added default constants for pagination parameters.